# devops-from-zero

./: .gitignore  00-prerequisites.md  01-linux-basics.md  02-networking.md  03-docker.md  04-cicd.md  05-aws.md  06-terraform.md  07-ansible.md  08-kubernetes.md  08-monitoring.md  09-kubernetes.md  09-monitoring.md  README.md  aller-plus-loin.md  cheatsheet.md  interview-experience.md  interview-questions.md  system-design-exercises.md  troubleshooting.md
devops-project/: .gitignore  README.md  docker-compose.yml
devops-project/.github/workflows/: ci.yml
devops-project/backend/: .dockerignore  Dockerfile  main.py  pyproject.toml  test_main.py
devops-project/frontend/: Dockerfile  index.html  nginx.conf  oxlintrc.json  package.json  vite.config.js
devops-project/frontend/src/: App.jsx  main.jsx
